# kandb

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.agents/skills/kandb-i18n-discipline/: SKILL.md
.agents/skills/kandb-icon-usage/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_request.yml
.github/workflows/: ci.yml
assets/icon.icon/: icon.json
crates/kandb/: Cargo.toml  build.rs
crates/kandb-assets/: Cargo.toml
crates/kandb-assets/src/: lib.rs
crates/kandb-i18n/: Cargo.toml
crates/kandb-i18n/locales/en-US/: app-about.ftl  app-home.ftl  app-menu.ftl  provider-sqlite.ftl
crates/kandb-i18n/locales/macos/en-US.lproj/: InfoPlist.strings
crates/kandb-i18n/locales/zh-CN/: app-about.ftl  app-home.ftl  app-menu.ftl  provider-sqlite.ftl
crates/kandb-i18n/src/: lib.rs
crates/kandb-provider-core/: Cargo.toml
crates/kandb-provider-core/src/: error.rs  lib.rs  model.rs  registry.rs  traits.rs
crates/kandb-provider-sqlite/: Cargo.toml
crates/kandb-provider-sqlite/src/: lib.rs
crates/kandb/locales/en-US/: main.ftl
crates/kandb/locales/zh-CN/: main.ftl
crates/kandb/src/: app_menus.rs  app_paths.rs  components.rs  config.rs  errors.rs  i18n.rs  main.rs  views.rs  workspace.rs
crates/kandb/src/components/: brand.rs  provider_icon.rs
crates/kandb/src/views/: about.rs  home.rs
crates/kandb/src/views/home/: sidebar_model.rs  sidebar_state.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bundle.rs  cli.rs  cmd.rs  context.rs  error.rs  main.rs  manifest.rs
crates/xtask/src/bundle/: common.rs  macos.rs  settings.rs  windows.rs
docs/: app-config-v1.md  provider-core-v1-plan.md
