[workspace]
members = [
  "crates/kandb",
  "crates/xtask",
]
default-members = ["crates/kandb"]

resolver = "2"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
