[workspace]
members = [
  "crates/kandb",
  "crates/kandb-provider-core",
  "crates/xtask",
]
default-members = ["crates/kandb"]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1.89"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["serde"] }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
