[workspace]
members = [
  "crates/kandb-assets",
  "crates/kandb-i18n",
  "crates/kandb",
  "crates/kandb-provider-core",
  "crates/kandb-provider-sqlite",
  "crates/xtask",
]
default-members = ["crates/kandb"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
async-compat = "0.2.5"
async-lock = "3.4.1"
async-trait = "0.1.89"
fluent-bundle = "0.16.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
sys-locale = "0.3.2"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["serde"] }
unic-langid = "0.9.6"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
