[package]
name = "kandb-provider-core"
version = "0.1.0"
edition = "2024"
description = "Provider abstractions and shared models for KanDB database backends."
license = "MIT"
homepage = "https://github.com/suxiaoshao/kandb"
repository = "https://github.com/suxiaoshao/kandb"

[dependencies]
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
futures = "0.3.31"
