[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
image = "0.25.10"
kandb-i18n = { path = "../kandb-i18n" }
plist = "1.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-bundler = "2.8.1"
tauri-utils = "2.8.3"
thiserror = "2.0.18"
toml = "0.9.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
walkdir = "2.5.0"
